--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
- <html> 
+<html> 
  <head>
  <title> Das ist die Websiede von Trainermax </title> 
  </head> 
  <body>
- <h1>Webseide von Trainermax </h1>  
+ <h1>Webseide von Trainermax </h1>
  <h2> Trainermax - Start</h2> 
- <p> <a href="file:///C:/Users/maxim/Pictures/Socials.html"> <img src="social media.png" alt="Social media">  </a>
- <p> <a href="file:///C:/Users/maxim/Pictures/About%20me.html"> <img src="About me.png" alt="About me"> </a>
- <p> <img src="rules.png" alt="Regeln">
- <p> <a href="https://streamelements.com/xtrainermax/tip"> <img src="donate.png" alt="Spende"> </a> 
- <p> <a href="https://www.twitch.tv/subs/xtrainermax"> <img src="subscribe.png" alt="Subs"> </a>
- <p> <a href="https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43"> <img src="playlist.png" alt="Playlist"> </a>
- <p> <img src="team.png" alt="Team">
-  <p> <img src="Equipment.png" alt="Team">
+ <p> <a href="./Socials.html"> <img src="./social media.png" alt="Social media">  </a>
+ <p> <a href="./About%20me.html"> <img src="./About me.png" alt="About me"> </a>
+ <p> <img src="./rules.png" alt="Regeln">
+ <p> <a href="https://streamelements.com/xtrainermax/tip%22%3E <img src="./donate.png" alt="Spende"> </a> 
+ <p> <a href="https://www.twitch.tv/subs/xtrainermax%22%3E <img src="./subscribe.png" alt="Subs"> </a>
+ <p> <a href="https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43%22%3E <img src="./playlist.png" alt="Playlist"> </a>
+ <p> <img src="./team.png" alt="Team">
+  <p> <img src="./Equipment.png" alt="Team">
 </body>
 </html>
