--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
+<html> 
+ <head>
+ <title> Das ist die Webseite von Trainermax </title> 
  </head> 
  <body>
- <h1>Webseide von Trainermax </h1>  
+ <h1>Webseite von Trainermax </h1>
  <h2> Trainermax - Start</h2> 
- <p> <a href="file:///C:/Users/maxim/Pictures/Socials.html"> <img src="social media.png" alt="Social media">  </a>
- <p> <a href="file:///C:/Users/maxim/Pictures/About%20me.html"> <img src="About me.png" alt="About me"> </a>
- <p> <img src="rules.png" alt="Regeln">
- <p> <a href="https://streamelements.com/xtrainermax/tip"> <img src="donate.png" alt="Spende"> </a> 
- <p> <a href="https://www.twitch.tv/subs/xtrainermax"> <img src="subscribe.png" alt="Subs"> </a>
- <p> <a href="https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43"> <img src="playlist.png" alt="Playlist"> </a>
- <p> <img src="team.png" alt="Team">
-  <p> <img src="Equipment.png" alt="Team">
+ <p> <input type="image" onclick="window.open('./Socials.html');" src="./social media.png" alt="Socials"/>
+<p> <input type="image" onclick="window.open('./About%20me.html');" src="./About me.png" alt="About Me"/>
+    <p> <input type="image" src="./rules.png" alt="Regeln"/>
+        <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip%22%3E%27);" src="./donate.png"" alt="Spenden"/>
+            <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax%22%3E%27);" src="./subscribe.png" alt="Sub"/>
+                <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43%22%3E%27);" src="./playlist.png" alt="Playlist"/>
+                    <p> <input type="image" src="./team.png" alt="Team"/>
+                        <p><input type="image" src="./Equipment.png" alt="Equipment"/>
 </body>
 </html>
