--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
  <body>
  <h1>Webseite von Trainermax </h1>
  <h2> Trainermax - Start</h2> 
+ <p> <input type="image" onclick="window.open('./Socials.html');" src="./social media.png" alt="Socials"/>
+<p> <input type="image" onclick="window.open('./About%20me.html');" src="./About me.png" alt="About Me"/>
+    <p> <input type="image" src="./rules.png" alt="Regeln"/>
+        <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip%22%3E%27);" src="./donate.png"" alt="Spenden"/>
+            <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax%22%3E%27);" src="./subscribe.png" alt="Sub"/>
+                <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43%22%3E%27);" src="./playlist.png" alt="Playlist"/>
+                    <p> <input type="image" src="./team.png" alt="Team"/>
+                        <p><input type="image" src="./Equipment.png" alt="Equipment"/>
  <p> <input type="image" onclick="window.open('./Socials.html');" src="./Social Media.png" alt="Socials"/>
  <p> <input type="image" onclick="window.open('./About%20me.html');" src="./About Me.png" alt="About Me"/>
  <p> <input type="image" src="./Rules.png" alt="Regeln"/>
- <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip');" src="./Donate.png" alt="Spenden"/>
- <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax');" src="./Subscribe.png" alt="Sub"/>
- <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43');" src="./Playlist.png" alt="Playlist"/>
+ <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip%22%3E%27);" src="./Donate.png"" alt="Spenden"/>
+ <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax%22%3E%27);" src="./Subscribe.png" alt="Sub"/>
+ <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43%22%3E%27);" src="./Playlist.png" alt="Playlist"/>
  <p> <input type="image" src="./Team.png" alt="Team"/>
  <p><input type="image" src="./Equipment.png" alt="Equipment"/>
 </body>
