--- a/Socials.html
+++ b/Socials.html
@@ -5,10 +5,10 @@
  <body>
  <h1> Social Media von Trainermax </h1> 
  <h2> Hier finde ihr alle Wichtigen Socials </h2> 
- <p> <a href="https://www.instagram.com/trainermax14/"> <img src="instagram.png" alt="instagramm"> </a>
- <p> <a href="https://www.youtube.com/channel/UCVBKslCNYVn9a4W9LZQqVMw"> <img src="youtube.png" alt="Youtube"> </a>
- <p> <a href="https://vm.tiktok.com/ZSoueVYG/"> <img src="tiktok.png" alt="TikTok"> </a>
- <p> <a href="https://discord.gg/CdjekRh"> <img src="discord.png" alt="discord"> </a>
 
+ <p><input type="image" onclick="window.open('href="https://www.instagram.com/trainermax14/);" src="./instergram.png"" alt="YopuTube"/>
+ <p><input type="image" onclick="window.open('https://www.youtube.com/channel/UCVBKslCNYVn9a4W9LZQqVMw);" src="./youtube.png"" alt="YopuTube"/>
+ <p><input type="image" onclick="window.open('https://vm.tiktok.com/ZSoueVYG/);" src="./tiktok.png"" alt="TikTok"/>
+ <p><input type="image" onclick="window.open('https://discord.gg/CdjekRh);" src="./discord.png"" alt="discord"/>
  </body> 
  </html>
