Revert "Update Socials.html"

--- a/Socials.html
+++ b/Socials.html
@@ -1,14 +1,14 @@
-<html> 
-    <head>
-    <title> Hier finde ihr alle Wichtigen Socials </title> 
-    </head> 
-    <body>
-    <h1> Social Media von Trainermax </h1> 
-    <h2> Hier finde ihr alle Wichtigen Socials </h2> 
-   
-    <p><input type="image" onclick="window.open('https://www.instagram.com/trainermax14/');" src="./Instagram.png" alt="Instagram"/>
-    <p><input type="image" onclick="window.open('https://www.youtube.com/channel/UCVBKslCNYVn9a4W9LZQqVMw');" src="./Youtube.png" alt="YouTube"/>
-    <p><input type="image" onclick="window.open('https://vm.tiktok.com/ZSoueVYG/');" src="./Tiktok.png" alt="TikTok"/>
-    <p><input type="image" onclick="window.open('https://discord.gg/CdjekRh');" src="./Discord.png" alt="Discord"/>
-    </body> 
-    </html>
+ <html> 
+ <head>
+ <title> Hier finde ihr alle Wichtigen Socials </title> 
+ </head> 
+ <body>
+ <h1> Social Media von Trainermax </h1> 
+ <h2> Hier finde ihr alle Wichtigen Socials </h2> 
+
+ <p><input type="image" onclick="window.open('href="https://www.instagram.com/trainermax14/);" src="./instergram.png"" alt="YopuTube"/>
+ <p><input type="image" onclick="window.open('https://www.youtube.com/channel/UCVBKslCNYVn9a4W9LZQqVMw);" src="./youtube.png"" alt="YopuTube"/>
+ <p><input type="image" onclick="window.open('https://vm.tiktok.com/ZSoueVYG/);" src="./tiktok.png"" alt="TikTok"/>
+ <p><input type="image" onclick="window.open('https://discord.gg/CdjekRh);" src="./discord.png"" alt="discord"/>
+ </body> 
+ </html>
