--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip');" src="./Donate.png"" alt="Spenden"/>
  <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax');" src="./Subscribe.png" alt="Sub"/>
  <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43');" src="./Playlist.png" alt="Playlist"/>
- <p> <input type="image" src="./Team.png" alt="Team"/>
+ <p> <input type="image" onclick="window.open('./Team.html');" src="./Team.png" alt="Team"/>
  <p><input type="image" src="./Equipment.png" alt="Equipment"/>
 </body>
 </html>
