--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
  <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax');" src="./Subscribe.png" alt="Sub"/>
  <p> <input type="image" onclick="window.open('https://open.spotify.com/playlist/76Bwpb05FI6Ot4ORp1YH4i?si=b78b3727e9024a43');" src="./Playlist.png" alt="Playlist"/>
  <p> <input type="image" onclick="window.open('./Team.html');" src="./Team.png" alt="Team"/>
- <p><input type="image" src="./Equipment.png" alt="Equipment"/>
+ <p><input type="image" onclick="window.open('./Equipment.html');" src="./Equipment.png" alt="Equipment"/>
 </body>
 </html>
