--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <h2> Trainermax - Start</h2> 
   
  <p> <input type="image" onclick="window.open('./Socials.html');" src="./Social Media.png" alt="Socials"/>
- <p> <input type="image" onclick="window.open('./About%20me.html');" src="./About Me.png" alt="About Me"/>
+ <p> <input type="image" onclick="window.open('./About%20me.html');" src="./über mich.png" alt="About Me"/>
  <p> <input type="image" onclick="window.open('./Regeln.html');" src="./Rules.png" alt="Regeln"/>
  <p><input type="image" onclick="window.open('https://streamelements.com/xtrainermax/tip');" src="./Donate.png"" alt="Spenden"/>
  <p><input type="image" onclick="window.open('https://www.twitch.tv/subs/xtrainermax');" src="./Subscribe.png" alt="Sub"/>
